# sensor-app

./: .gitignore  README.md
backend/api/: Dockerfile  README.md  pyproject.toml
backend/api/deployment/: deployment.yaml
backend/api/src/sensor_app_api/: crud.py  database.py  initialize_db.py  main.py  models.py  schemas.py  test.py
backend/api/src/sensor_app_api/archive/: hello_world.py  test.py
backend/database/: pyproject.toml
backend/database/deployment/: deployment.yaml  deployment_mariadb.yaml  secret.yaml
backend/database/src/sensor_app_db/: create_tables.py  get_info.py  get_info_test.py  models  models.py
backend/db-helper/: README.md  pyproject.toml
backend/db-helper/src/sensor_app_db_helper/: create_tables.py
backend/deployment/: docker-compose.yaml
frontend/: README.md  pyproject.toml
frontend/src/sensor_app_ui/: data_utils.py  test.ipynb  test_app copy.py  test_app.py
sensor-readout/: README.md  pyproject.toml  requirements.txt
sensor-readout/production/: getInfo.py
sensor-readout/src/sensor-readout/: get_info.py
