[tool.poetry]
name = "sensor-app-ui"
version = "0.1.0"
description = ""
authors = ["aambrose-unh <aambrose.unh@gmail.com>"]
readme = "README.md"
packages = [{ include = "sensor_app_ui", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10.1,<3.13"
sensor-app-api = {path = "../backend/api", develop = true}
streamlit = "^1.27.2"
pandas = "^2.1.1"
ipykernel = "^6.25.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
notebook = "^7.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
